# alai

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  pyproject.toml
.github/workflows/: on-push.yml
alai/: CMakeLists.txt  __init__.py  __main__.py  config.py  config_test.py  extension.cc  extension.pyi  extension_test.py  graph.py  graph_test.py  package.py  repo.py  wal.py  wal_test.py
alai/cc/: CMakeLists.txt  alai.cc  alai.h
alai/cli/: __init__.py  add_package.py  bootstrap.py  build_graph.py  build_package.py  export_database.py  main.py  query.py  remove_package.py  update_package.py
alai/testdata/: pacman.conf
alai/testdata/pacman.d/: mirrorlist
examples/: alai.toml
script/: pkginfo.sh
