[project]
name = "alai"
version = "0.0.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Daniel Betshatsky", email = "daniel.bershatsky@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/archlinux-ai/alai"
Issues = "https://github.com/archlinux-ai/alai/issues"

[tool.pytest.ini_options]
minversion = "8.2"
addopts = "-ra -q -m 'not slow' --no-header"
testpaths = ["alai", "tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = ["ignore::DeprecationWarning"]
python_files = ["*_test.py", "*_bench.py"]
python_classes = ["Test*", "*Benchmark"]
python_functions = ["test_*", "bench_*"]

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = ["E", "F", "I", "LOG", "PYI"]
ignore = ["I001", "PYI021"]
preview = true

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["E501"]
